# slicer_granular

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ideas.txt  slicer_granular.jucer
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: AttachedSlider.h  AudioBuffersChannels.h  DataStructures.h  EssentiaSetup.h  FileSelectorComponent.h  GranularSynthesis.cpp  GranularSynthesis.h  LatchedRandom.h  OnsetAnalysis.cpp  OnsetAnalysis.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Random.h  SlicerGranularPluginEditor.cpp  SlicerGranularPluginEditor.h  SlicerGranularPluginProcessor.cpp  SlicerGranularPluginProcessor.h  SliderColumn.h  WaveformComponent.h  algo_util.h  createPluginFilter.cpp  dsp_util.h  misc_util.cpp  misc_util.h  params.h  plotting.h
Source/Gui/: AttachedComboBox.cpp  AttachedComboBox.h  AttachedSlider.cpp  AttachedSlider.h  BasicParameterPage.cpp  BasicParameterPage.h  EnvelopeParameterPage.cpp  EnvelopeParameterPage.h  FileSelectorComponent.h  FxPage.cpp  FxPage.h  GrainBusyDisplay.cpp  GrainBusyDisplay.h  GranularMainParametersPage.cpp  GranularMainParametersPage.h  MainParamsComponent.h  PresetPanel.cpp  PresetPanel.h  RandomizedParameterPage.cpp  RandomizedParameterPage.h  ScannerParameterPage.cpp  ScannerParameterPage.h  SliderColumn.cpp  SliderColumn.h  TabbedPages.cpp  TabbedPages.h  WaveformComponent.cpp  WaveformComponent.h
Source/Params/: GranularParameterMapping.h  params.h
Source/Service/: PresetManager.cpp  PresetManager.h
Source/Synthesis/: GrainDescription.h  GranularSound.cpp  GranularSynthesis.cpp  GranularSynthesis.h  GranularSynthesizer.cpp  GranularSynthesizer.h  GranularVoice.cpp  GranularVoice.h  JuceGranularSynth.cpp  JuceGranularSynth.h  JuceGranularSynthSound.cpp  JuceGranularSynthSound.h  JuceGranularSynthVoice.cpp  JuceGranularSynthVoice.h  JuceGranularSynthesizer.cpp  JuceGranularSynthesizer.h  VoicesXGrains.h
